tests/errors/literals/i32-underflow.fn
---
Description: Bare literal below i32 minimum
Expected: FN3200
---

type Program
{
    fn Main -> i32
    {
        var v = -2147483649
        return 0
    }
}
